<resources>
    <string name="resources_language">en</string>
    <string name="resources_country_code">US</string>
    <string name="resources_script">Latn</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="black_them">Black Theme</string>
    <string name="status_theme">Status.im Theme</string>
    <string name="notification_sync_init">Initializing service</string>
    <string name="notification_sync_in_progress">Synchronising…</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_historical">Historical</string>
    <string name="title_activity_bug_report">Bug report</string>
    <string name="title_activity_group_details">Community details</string>
    <string name="title_activity_choose_sticker">Send a sticker</string>
    <string name="title_activity_keys_backup_setup">Key Backup</string>
    <string name="title_activity_keys_backup_restore">Use Key Backup</string>
    <string name="title_activity_verify_device">Verify session</string>
    <string name="keys_backup_is_not_finished_please_wait">Keys backup is not finished, please wait…</string>
    <string name="sign_out_bottom_sheet_warning_no_backup">You’ll lose your encrypted messages if you sign out now</string>
    <string name="sign_out_bottom_sheet_warning_backing_up">Key backup in progress. If you sign out now you’ll lose access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_warning_backup_not_active">Secure Key Backup should be active on all of your sessions to avoid losing access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_dont_want_secure_messages">I don’t want my encrypted messages</string>
    <string name="sign_out_bottom_sheet_backing_up_keys">Backing up keys…</string>
    <string name="keys_backup_activate">Use Key Backup</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="backup">Back up</string>
    <string name="sign_out_bottom_sheet_will_lose_secure_messages">You’ll lose access to your encrypted messages unless you back up your keys before signing out.</string>
    <string name="dialog_title_third_party_licences">Third party licences</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="send">Send</string>
    <string name="resend">Resend</string>
    <string name="redact">Remove</string>
    <string name="quote">Quote</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="speak">Speak</string>
    <string name="clear">Clear</string>
    <string name="later">Later</string>
    <string name="forward">Forward</string>
    <string name="permalink">Permalink</string>
    <string name="view_source">View Source</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="none">None</string>
    <string name="revoke">Revoke</string>
    <string name="disconnect">Disconnect</string>
    <string name="report_content">Report content</string>
    <string name="active_call">Active call</string>
    <string name="play_video">Play</string>
    <string name="pause_video">Pause</string>
    <string name="dismiss">Dismiss</string>
    <string name="reset">Reset</string>
    <string name="start_chatting">Start Chatting</string>
    <string name="ongoing_conference_call">Ongoing conference call.\nJoin as %1$s or %2$s</string>
    <string name="ongoing_conference_call_voice">Voice</string>
    <string name="ongoing_conference_call_video">Video</string>
    <string name="cannot_start_call">Cannot start the call, please try later</string>
    <string name="missing_permissions_warning">"Due to missing permissions, some features may be missing…</string>
    <string name="missing_permissions_error">"Due to missing permissions, this action is not possible.</string>
    <string name="missing_permissions_to_start_conf_call">You need permission to invite to start a conference in this room</string>
    <string name="no_permissions_to_start_conf_call">You do not have permission to start a conference call in this room</string>
    <string name="send_bug_report_rage_shake">Rage shake to report bug</string>
    <string name="room_menu_search">Search</string>
    <string name="room_resend_unsent_messages">Resend unsent messages</string>
    <string name="room_delete_unsent_messages">Delete unsent messages</string>
    <string name="room_details_title">Room Details</string>
    <string name="settings_keep_media">Keep media</string>
    <string name="settings_cryptography">Cryptography</string>
    <string name="settings_cryptography_manage_keys">Cryptography Keys Management</string>
    <string name="settings_home_display">Home display</string>
    <string name="settings_pin_missed_notifications">Pin rooms with missed notifications</string>
    <string name="settings_pin_unread_messages">Pin rooms with unread messages</string>
    <string name="settings_devices_list">Sessions</string>
    <string name="settings_inline_url_preview">Inline URL preview</string>
    <string name="settings_inline_url_preview_summary">Preview links within the chat when your homeserver supports this feature.</string>
    <string name="settings_send_typing_notifs">Send typing notifications</string>
    <string name="settings_send_typing_notifs_summary">Let other users know that you are typing.</string>
    <string name="settings_send_markdown">Markdown formatting</string>
    <string name="settings_send_markdown_summary">Format messages using markdown syntax before they are sent. This allows for advanced formatting such as using asterisks to display italic text.</string>
    <string name="settings_always_show_timestamps">Show timestamps for all messages</string>
    <string name="settings_12_24_timestamps">Show timestamps in 12-hour format</string>
    <string name="settings_show_read_receipts">Show read receipts</string>
    <string name="settings_show_read_receipts_summary">Click on the read receipts for a detailed list.</string>
    <string name="settings_show_room_member_state_events">Show room member state events</string>
    <string name="settings_show_room_member_state_events_summary">Includes invite/join/left/kick/ban events and avatar/display name changes.</string>
    <string name="settings_show_join_leave_messages">Show join and leave events</string>
    <string name="settings_show_join_leave_messages_summary">Invites, kicks, and bans are unaffected.</string>
    <string name="settings_show_avatar_display_name_changes_messages">Show account events</string>
    <string name="settings_show_avatar_display_name_changes_messages_summary">Includes avatar and display name changes.</string>
    <string name="settings_vibrate_on_mention">Vibrate when mentioning a user</string>
    <string name="settings_preview_media_before_sending">Preview media before sending</string>
    <string name="settings_send_message_with_enter">Send message with enter</string>
    <string name="settings_send_message_with_enter_summary">Enter button of the soft keyboard will send message instead of adding a line break</string>
    <string name="settings_analytics">Analytics</string>
    <string name="settings_opt_in_of_analytics">Send analytics data</string>
    <string name="settings_opt_in_of_analytics_summary">Element collects anonymous analytics to allow us to improve the application.</string>
    <string name="settings_user_interface">User interface</string>
    <string name="settings_interface_language">Language</string>
    <string name="settings_select_language">Choose language</string>
    <string name="settings_media">Media</string>
    <string name="settings_default_compression">Default compression</string>
    <string name="settings_default_media_source">Default media source</string>
    <string name="settings_play_shutter_sound">Play shutter sound</string>
    <string name="settings_theme">Theme</string>
    <string name="encryption_information_device_name">Public name</string>
    <string name="encryption_information_device_id">Session ID</string>
    <string name="encryption_information_device_key">Session key</string>
    <string name="encryption_export_e2e_room_keys">Export E2E room keys</string>
    <string name="encryption_export_room_keys_summary">Export the keys to a local file</string>
    <string name="encryption_message_recovery">Encrypted Messages Recovery</string>
    <string name="encryption_settings_manage_message_recovery_summary">Manage Key Backup</string>
    <string name="encryption_import_e2e_room_keys">Import E2E room keys</string>
    <string name="encryption_import_room_keys_summary">Import the keys from a local file</string>
    <string name="encryption_never_send_to_unverified_devices_title">Encrypt to verified sessions only</string>
    <string name="encryption_never_send_to_unverified_devices_summary">Never send encrypted messages to unverified sessions from this session.</string>
    <string name="font_size">Font size</string>
    <string name="room_add_matrix_apps">Add Matrix apps</string>
    <string name="settings_labs_native_camera">Use native camera</string>
    <string name="settings_labs_native_camera_summary">Start the system camera instead of the custom camera screen.</string>
    <string name="settings_info_area_show">Show the info area</string>
    <string name="settings_show_redacted">Show removed messages</string>
    <string name="settings_show_redacted_summary">Show a placeholder for removed messages</string>
    <string name="settings_category_timeline">Timeline</string>
    <string name="settings_category_composer">Message editor</string>
    <string name="settings_security_pin_code_title">Enable PIN</string>
    <string name="settings_security_pin_code_summary">If you want to reset your PIN, tap Forgot PIN to logout and reset.</string>
    <string name="settings_security_pin_code_use_biometrics_title">Enable biometrics</string>
    <string name="settings_security_pin_code_use_biometrics_summary_on">Enable device specific biometrics, like fingerprints and face recognition.</string>
    <string name="settings_security_pin_code_use_biometrics_summary_off">PIN code is the only way to unlock Element.</string>
    <string name="settings_security_pin_code_notifications_title">Show content in notifications</string>
    <string name="settings_security_pin_code_notifications_summary_on">Show details like room names and message content.</string>
    <string name="settings_security_pin_code_notifications_summary_off">Only display number of unread messages in a simple notification.</string>
    <string name="settings_security_pin_code_grace_period_title">Require PIN after 2 minutes</string>
    <string name="settings_security_pin_code_grace_period_summary_on">PIN code is required after 2 minutes of not using Element.</string>
    <string name="settings_security_pin_code_grace_period_summary_off">PIN code is required every time you open Element.</string>
    <string name="settings_security_pin_code_change_pin_title">Change PIN</string>
    <string name="settings_security_pin_code_change_pin_summary">Change your current PIN</string>
</resources>